# authority_scrapy

authority-scrapers-main/: pyproject.toml  scrapy.cfg
