[tool.poetry]
name = "authority-scrapers"
version = "0.1.0"
description = ""
authors = ["Yuri <yuri@authority.org>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
